--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.9",
-    "@astrojs/react": "^3.1.0",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.22",
     "animejs": "^3.2.2",
     "astro": "^4.5.3",
+    "astro-robots-txt": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^5.4.2"
