--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.5.9",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.22",
+    "@vercel/speed-insights": "^1.0.10",
     "animejs": "^3.2.2",
     "astro": "^4.5.3",
     "astro-robots-txt": "^1.0.0",
